[gd_scene load_steps=11 format=3 uid="uid://cxtp6u8f8c4xj"]

[ext_resource type="Script" uid="uid://bckhkmlgg7mfm" path="res://Scripts/triangle_enemy.gd" id="1_81x11"]
[ext_resource type="PackedScene" uid="uid://b4r3004pbyfho" path="res://Scenes/hurtbox.tscn" id="2_343q2"]
[ext_resource type="Texture2D" uid="uid://5ose8gw74fkw" path="res://Assets/Sprites/EnemySprite-export copy.png" id="2_m2jwi"]
[ext_resource type="PackedScene" uid="uid://dxidibs7rd68f" path="res://Scenes/projectile_launcher.tscn" id="3_ntdtf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ntdtf"]
atlas = ExtResource("2_m2jwi")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_343q2"]
atlas = ExtResource("2_m2jwi")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_28wd8"]
atlas = ExtResource("2_m2jwi")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2jwi"]
atlas = ExtResource("2_m2jwi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_m2jwi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntdtf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_343q2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28wd8")
}],
"loop": false,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2jwi")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_ntdtf"]
_data = [Vector2(0.0162602, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.36039, 0.0, 0, 0]
point_count = 2

[node name="TriangleEnemy" type="CharacterBody2D"]
z_index = 3
collision_layer = 8
collision_mask = 4
script = ExtResource("1_81x11")
is_shooting = true

[node name="Lauchers" type="Node2D" parent="."]
position = Vector2(9, -2)

[node name="ProjectileLauncher" parent="Lauchers" instance=ExtResource("3_ntdtf")]
direction = Vector2(1, -1)

[node name="ProjectileLauncher2" parent="Lauchers" instance=ExtResource("3_ntdtf")]
position = Vector2(-9, 14)
direction = Vector2(0, 1)

[node name="ProjectileLauncher3" parent="Lauchers" instance=ExtResource("3_ntdtf")]
position = Vector2(-18, 0)
direction = Vector2(-1, -1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -1)
sprite_frames = SubResource("SpriteFrames_m2jwi")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(12, 9, 0, -14, -12, 9)

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCastLeft" type="RayCast2D" parent="RayCasts"]
position = Vector2(0, -13)
target_position = Vector2(-15, 0)
collision_mask = 12

[node name="RayCastLeft2" type="RayCast2D" parent="RayCasts"]
position = Vector2(0, 13)
target_position = Vector2(-15, 0)
collision_mask = 12

[node name="RayCastDown" type="RayCast2D" parent="RayCasts"]
position = Vector2(13, 0)
target_position = Vector2(0, 14)
collision_mask = 12

[node name="RayCastDown2" type="RayCast2D" parent="RayCasts"]
position = Vector2(-13, 0)
target_position = Vector2(0, 14)
collision_mask = 12

[node name="RayCastRight" type="RayCast2D" parent="RayCasts"]
position = Vector2(0, -13)
target_position = Vector2(15, 0)
collision_mask = 12

[node name="RayCastRight2" type="RayCast2D" parent="RayCasts"]
position = Vector2(0, 13)
target_position = Vector2(15, 0)
collision_mask = 12

[node name="RayCastUp" type="RayCast2D" parent="RayCasts"]
position = Vector2(-13, 0)
target_position = Vector2(0, -15)
collision_mask = 12

[node name="RayCastUp2" type="RayCast2D" parent="RayCasts"]
position = Vector2(13, 0)
target_position = Vector2(0, -15)
collision_mask = 12

[node name="Timers" type="Node" parent="."]

[node name="DeathTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="DamageTimer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
one_shot = true
explosiveness = 0.7
randomness = 1.0
emission_shape = 2
emission_sphere_radius = 10.0
direction = Vector2(0, 0)
spread = 90.0
gravity = Vector2(0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 5.0
scale_amount_min = 2.0
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_ntdtf")
color = Color(0.845341, 0.000162417, 0.0440511, 1)

[node name="Hurtbox" parent="." instance=ExtResource("2_343q2")]
collision_layer = 8
collision_mask = 18

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
polygon = PackedVector2Array(13, 10, 0, -15, -13, 10)

[connection signal="timeout" from="Timers/DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="Timers/DamageTimer" to="." method="_on_damage_timer_timeout"]
